--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Step 5: Set up SSH key for EC2
       - name: Set up SSH key
-        run: echo "${{ secrets.EC2_SSH_KEY }}" > /tmp/id_rsa
+        run: echo "${{ secrets.EC2_SSH_KEY }}" | tr -d '\r' > /tmp/id_rsa
         env:
           EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
 
@@ -50,6 +50,7 @@ jobs:
         run: |
           chmod 600 /tmp/id_rsa
           ssh -o StrictHostKeyChecking=no -i /tmp/id_rsa $EC2_USER@$EC2_HOST << 'EOF'
-            docker pull muruganjr/demoapp:master
-            docker-compose -f /path/to/docker-compose.yml up -d
+            set -e
+            docker pull muruganjr/demoapp:master || { echo 'Docker pull failed'; exit 1; }
+            docker-compose -f /path/to/docker-compose.yml up -d || { echo 'Docker Compose failed'; exit 1; }
           EOF
